# cogs

./: .dockerignore  .gitignore  LICENSE  compose.yml  pyproject.toml
lfg/: __init__.py  checks.py  info.json  main.py  objects.py  types.py  utils.py
